# qawno

./: .gitignore  AboutDialog.cpp  CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerOptionsDialog.cpp  CompilerOptionsDialog.h  CompilerOptionsDialog.ui  EditorWidget.cpp  EditorWidget.h  FindDialog.cpp  FindDialog.h  FindDialog.ui  FindReplaceDialog.cpp  FindReplaceDialog.h  FindReplaceDialog.ui  GoToDialog.cpp  GoToDialog.h  GoToDialog.ui  Highlighter.cpp  Highlighter.h  IssueList.cpp  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  OutputWidget.cpp  README  README.md  ReplaceDialog.ui  SyntaxHighlighter.cpp  codeedit.cpp  codeedit.h  compiler.cpp  compiler.h  editor.cpp  editor.h  highlighter.cpp  highlighter.h  issuelist.cpp  (+14 more)
cmake/: MacOSXBundleInfo.plist.in
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Compiler.cpp  Compiler.h  CompilerOptionsDialog.cpp  CompilerOptionsDialog.h  CompilerOptionsDialog.ui  CompilerSettingsDialog.cpp  CompilerSettingsDialog.h  CompilerSettingsDialog.ui  EditorWidget.cpp  EditorWidget.h  FindDialog.cpp  FindDialog.h  FindDialog.ui  GoToDialog.cpp  GoToDialog.h  GoToDialog.ui  Issue.cpp  Issue.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MenuBar.cpp  MenuBar.h  OutputWidget.cpp  OutputWidget.h  ReplaceDialog.cpp  ReplaceDialog.h  ReplaceDialog.ui  StatusBar.cpp  StatusBar.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  main.cpp
